# TODO File should be automatically generated.
import sys
from os import path
from pathlib import Path,PurePath
sys.path.append(str(PurePath(Path(path.dirname(__file__)).parent)))

from .model import (
Assembly,
Connectable,
Connection,
Decision,
Design,
Element,
Layout,
LayoutModification,
LayoutModificationStrategy,
Link,
Parameter,
Plan,
Pose,
Prototype,
Representation,
Scope,
Sobject,
Value,
Encoding,
FileType,
Platform,
RepresentationProtocol,
Dependency,
LayoutStrategy)

from .v1.model_pb2 import (
DEPENDENCY_DEPENDENT,
DEPENDENCY_INDEPENDENT,
DEPENDENCY_POINTDEPENDENT,
DEPENDENCY_VIEWDEPENDENT,
DESCRIPTOR,
ENCODING_TEXT_ASCII,
ENCODING_TEXT_BASE64,
ENCODING_TEXT_UFT16,
ENCODING_TEXT_UFT32,
ENCODING_TEXT_UFT8,
FILETYPE_C,
FILETYPE_CPP,
FILETYPE_CSHARP,
FILETYPE_GO,
FILETYPE_JSON,
FILETYPE_NATIVE,
FILETYPE_PY,
FILETYPE_RUST,
FILETYPE_STEP,
FILETYPE_TOML,
FILETYPE_XML,
FILETYPE_YAML,
LAYOUTSTRATEGY_BREADTHFIRST,
LAYOUTSTRATEGY_DEPTHFIRST,
PLATFORM_ARCHICAD,
PLATFORM_CADQUERY,
PLATFORM_CITYENGINE,
PLATFORM_DYNAMO,
PLATFORM_ENERGYPLUS,
PLATFORM_EXCEL,
PLATFORM_FORNJOT,
PLATFORM_FREECAD,
PLATFORM_GRASSHOPPER,
PLATFORM_HYPAR,
PLATFORM_IFCOPENSHELL,
PLATFORM_JSCAD,
PLATFORM_OPENSCAD,
PLATFORM_OPENSTUDIO,
PLATFORM_REVIT,
PLATFORM_RHINO,
PLATFORM_SEMIO,
PLATFORM_SPECKLE,
PLATFORM_SVERCHOK,
PLATFORM_THREE,
PLATFORM_TRUCK,
REPRESENTATIONPROTOCOL_FULL,
REPRESENTATIONPROTOCOL_NONE,
REPRESENTATIONPROTOCOL_SIMPLE,
)